--- a/src/easv/GUI/View/mainWindow.fxml
+++ b/src/easv/GUI/View/mainWindow.fxml
@@ -4,19 +4,24 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.TilePane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="1129.0" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.MainWindowController">
-   <top>
-      <HBox prefHeight="63.0" prefWidth="1012.0" styleClass="blue" BorderPane.alignment="CENTER">
-         <children>
-            <JFXButton prefHeight="62.0" prefWidth="74.0" styleClass="blue" text="Sign in" />
-            <JFXButton prefHeight="66.0" prefWidth="82.0" text="Login" />
-            <Label prefHeight="63.0" prefWidth="483.0" text="                                                     the application name" />
-         </children>
-      </HBox>
-   </top>
-   <center>
-      <TilePane fx:id="tlepane" prefHeight="596.0" prefWidth="1014.0" BorderPane.alignment="CENTER" />
-   </center>
-</BorderPane>
+<StackPane fx:id="stackpne" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="722.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.MainWindowController">
+   <children>
+      <BorderPane fx:id="borderpne" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" stylesheets="/easv/GUI/View/CSS/Styles.css">
+         <top>
+            <HBox prefHeight="63.0" prefWidth="1012.0" styleClass="blue" BorderPane.alignment="CENTER">
+               <children>
+                  <JFXButton fx:id="signin" onAction="#login" prefHeight="62.0" prefWidth="74.0" styleClass="blue" text="Sign in" />
+                  <JFXButton fx:id="loginin" onAction="#sign" prefHeight="66.0" prefWidth="82.0" text="Log in" />
+                  <Label prefHeight="63.0" prefWidth="483.0" text="                                                     the application name" />
+               </children>
+            </HBox>
+         </top>
+         <center>
+            <TilePane fx:id="tlepane" prefTileHeight="200.0" prefTileWidth="200.0" prefWidth="1014.0" styleClass="lightwhitw" BorderPane.alignment="CENTER" />
+         </center>
+      </BorderPane>
+   </children>
+</StackPane>
