--- a/src/easv/GUI/View/loginpage.fxml
+++ b/src/easv/GUI/View/loginpage.fxml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<StackPane fx:id="stcpne" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="easv.GUI.Controller.LoginController"
-            prefHeight="400.0" prefWidth="600.0" styleClass="lightwhitw" >
 
+<StackPane fx:id="stcpne" prefHeight="400.0" prefWidth="600.0" styleClass="lightwhitw" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.LoginController">
+   <children>
+      <AnchorPane fx:id="anchorpne" prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <TextField fx:id="usernameid" layoutX="190.0" layoutY="123.0" promptText="Username" />
+            <TextField fx:id="passwordid" layoutX="190.0" layoutY="175.0" promptText="password" />
+            <JFXButton fx:id="loginid" layoutX="227.0" layoutY="235.0" onAction="#loginbtn" prefHeight="40.0" prefWidth="76.0" text="Login" />
+            <JFXButton fx:id="backid" layoutX="244.0" layoutY="292.0" onAction="#backbtn" text="Back" />
+         </children>
+      </AnchorPane>
+   </children>
 </StackPane>
