--- a/src/easv/GUI/View/CreateAccount.fxml
+++ b/src/easv/GUI/View/CreateAccount.fxml
@@ -1,19 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<StackPane fx:id="stackpaneid" prefHeight="400.0" prefWidth="600.0" styleClass="blue" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.CreateAccountController">
+<StackPane fx:id="stackpaneid" prefHeight="722.0" prefWidth="926.0" styleClass="blue" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.CreateAccountController">
    <children>
-      <AnchorPane fx:id="anchorid" prefHeight="200.0" prefWidth="200.0">
+      <AnchorPane fx:id="anchorid" prefHeight="196.0" prefWidth="327.0" style="-fx-background-color: #F4DF4EFF;">
          <children>
-            <JFXButton fx:id="save" layoutX="449.0" layoutY="353.0" onAction="#saveuser" text="Save" />
-            <JFXButton fx:id="exitid" layoutX="516.0" layoutY="353.0" onAction="#exit" text="Exit" />
-            <TextField fx:id="name" layoutX="181.0" layoutY="61.0" promptText="username" />
-            <TextField fx:id="email" layoutX="181.0" layoutY="105.0" promptText="Email" />
-            <TextField fx:id="password" layoutX="181.0" layoutY="149.0" promptText="Password" />
+            <JFXButton fx:id="save" buttonType="RAISED" layoutX="563.0" layoutY="622.0" onAction="#saveuser" prefHeight="25.0" prefWidth="67.0" style="-fx-background-color: #949398FF; -fx-background-radius: 90;" text="Save">
+               <font>
+                  <Font name="System Bold Italic" size="15.0" />
+               </font></JFXButton>
+            <JFXButton fx:id="exitid" buttonType="RAISED" layoutX="830.0" layoutY="620.0" onAction="#exit" prefHeight="35.0" prefWidth="45.0" style="-fx-background-color: #949398FF; -fx-background-radius: 90;" text="Exit" textFill="#ff0505" />
+            <AnchorPane prefHeight="722.0" prefWidth="544.0" style="-fx-background-color: #949398FF;">
+               <children>
+                  <ImageView fitHeight="91.0" fitWidth="87.0" layoutX="229.0" layoutY="193.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../resourse/icons8_java_64px.png" />
+                     </image>
+                  </ImageView>
+                  <Label layoutX="210.0" layoutY="295.0" prefHeight="35.0" prefWidth="142.0" text="Powered by java " textFill="#ffea05bd">
+                     <font>
+                        <Font name="Book Antiqua Bold Italic" size="17.0" />
+                     </font>
+                  </Label>
+               </children>
+            </AnchorPane>
+            <TextField layoutX="583.0" layoutY="305.0" prefHeight="35.0" prefWidth="222.0" promptText="username" style="-fx-background-color: #949398FF;">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <TextField layoutX="583.0" layoutY="375.0" prefHeight="35.0" prefWidth="222.0" promptText="Password" style="-fx-background-color: #949398FF;">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <TextField layoutX="583.0" layoutY="523.0" prefHeight="35.0" prefWidth="222.0" promptText="Email" style="-fx-background-color: #949398FF;">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <TextField layoutX="583.0" layoutY="451.0" prefHeight="35.0" prefWidth="222.0" promptText="RepeatPassword" style="-fx-background-color: #949398FF;">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </TextField>
+            <Label layoutX="563.0" layoutY="168.0" prefHeight="35.0" prefWidth="191.0" text="Create An Acount " textFill="#8d8381">
+               <font>
+                  <Font name="Consolas" size="18.0" />
+               </font>
+            </Label>
+            <Separator layoutX="553.0" layoutY="237.0" prefHeight="6.0" prefWidth="345.0" style="-fx-background-color: #949398FF;" />
          </children>
       </AnchorPane>
    </children>
