--- a/src/easv/GUI/View/mainWindow.fxml
+++ b/src/easv/GUI/View/mainWindow.fxml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.TilePane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <StackPane fx:id="stackpne" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="722.0" prefWidth="926.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.MainWindowController">
@@ -15,27 +16,6 @@
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
             <BorderPane fx:id="borderpne" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" stylesheets="/easv/GUI/View/CSS/Styles.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <top>
-                  <HBox prefHeight="63.0" prefWidth="1012.0" style="-fx-background-color: #81d4fa;">
-                     <children>
-                        <JFXButton fx:id="loginin" onAction="#login" prefHeight="74.0" prefWidth="117.0" style="-fx-background-color: #29b6f6;" text="Log in" textFill="#a14242">
-                           <font>
-                              <Font name="Broadway" size="22.0" />
-                           </font></JFXButton>
-                        <JFXButton fx:id="signin" onAction="#sign" prefHeight="66.0" prefWidth="121.0" style="-fx-background-color: #29b6f6;" text="sign up" textFill="#c62b2b">
-                           <font>
-                              <Font name="Broadway" size="22.0" />
-                           </font></JFXButton>
-                        <Label prefHeight="66.0" prefWidth="465.0" style="-fx-background-color: #81d4fa;" text=" Event Manager" textFill="#b21e1e">
-                           <font>
-                              <Font name="Consolas" size="56.0" />
-                           </font></Label>
-                     </children>
-                     <BorderPane.margin>
-                        <Insets />
-                     </BorderPane.margin>
-                  </HBox>
-               </top>
                <center>
                   <TilePane fx:id="tlepane" prefTileHeight="200.0" prefTileWidth="200.0" prefWidth="1014.0" style="-fx-background-color: #81d4fa;" BorderPane.alignment="CENTER">
                      <BorderPane.margin>
@@ -43,6 +23,71 @@
                      </BorderPane.margin>
                   </TilePane>
                </center>
+               <left>
+                  <VBox prefHeight="711.0" prefWidth="140.0" style="-fx-background-color: #5e35b1;" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label prefHeight="66.0" prefWidth="465.0" style="-fx-background-color: #81d4fa;" text=" Event Manager" textFill="#b21e1e">
+                           <font>
+                              <Font name="Consolas" size="18.0" />
+                           </font></Label>
+                        <JFXButton fx:id="loginin" onAction="#login" prefHeight="74.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Log in" textFill="#a14242">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font></JFXButton>
+                        <JFXButton fx:id="signin" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="sign up" textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font></JFXButton>
+                        <JFXButton fx:id="signin1" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="About us" textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="signin3" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Blog" textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="signin2" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Exit" textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton fx:id="signin21" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text=" " textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                           <graphic>
+                              <FontAwesomeIconView fill="#2349d3" glyphName="FACEBOOK" size="32" wrappingWidth="30.571428298950195" />
+                           </graphic>
+                        </JFXButton>
+                        <JFXButton fx:id="signin22" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text=" " textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                           <graphic>
+                              <FontAwesomeIconView fill="#bf2b2b" glyphName="HASHTAG" selectionFill="#f2f2f2" />
+                           </graphic>
+                        </JFXButton>
+                        <JFXButton fx:id="signin23" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text=" " textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                           <graphic>
+                              <FontAwesomeIconView fill="#00ff0d" glyphName="WHATSAPP" />
+                           </graphic>
+                        </JFXButton>
+                        <JFXButton fx:id="signin24" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text=" " textFill="#c62b2b">
+                           <font>
+                              <Font name="Broadway" size="22.0" />
+                           </font>
+                           <graphic>
+                              <FontAwesomeIconView fill="#ba18ff" glyphName="INSTAGRAM" />
+                           </graphic>
+                        </JFXButton>
+                     </children>
+                  </VBox>
+               </left>
             </BorderPane>
          </children>
       </AnchorPane>
