--- a/src/easv/GUI/View/Users/customerpage.fxml
+++ b/src/easv/GUI/View/Users/customerpage.fxml
@@ -1,26 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane stylesheets="/easv/GUI/View/CSS/Styles.css" fx:id="stackpanid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-        fx:controller="easv.GUI.Controller.Users.CustomerController" styleClass="honey">
+<StackPane  fx:id="stackpanid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" styleClass="honey" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.CustomerController"
+      >
    <children>
-      <AnchorPane fx:id="anchorpaneid" prefHeight="200.0" prefWidth="200.0">
-         <children>
-            <Label layoutX="26.0" layoutY="22.0" prefHeight="26.0" prefWidth="94.0" text="username here" />
-            <ChoiceBox layoutX="26.0" layoutY="98.0" prefWidth="150.0" />
-            <Label layoutX="26.0" layoutY="74.0" prefHeight="17.0" prefWidth="87.0" text="owned tickets" />
-            <ImageView fitHeight="329.0" fitWidth="233.0" layoutX="335.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" />
-            <Separator layoutX="297.0" layoutY="13.0" orientation="VERTICAL" prefHeight="364.0" prefWidth="9.0" />
-            <JFXButton layoutX="26.0" layoutY="351.0" text="Back" />
-         </children>
-      </AnchorPane>
+      <AnchorPane fx:id="anchorpaneid" stylesheets="/easv/GUI/View/CSS/Styles.css" prefHeight="724.0" prefWidth="934.0"  />
    </children>
 </StackPane>
