--- a/src/easv/GUI/View/mainWindow.fxml
+++ b/src/easv/GUI/View/mainWindow.fxml
@@ -4,6 +4,8 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
@@ -26,10 +28,17 @@
                <left>
                   <VBox prefHeight="711.0" prefWidth="140.0" style="-fx-background-color: #5e35b1;" BorderPane.alignment="CENTER">
                      <children>
-                        <Label prefHeight="66.0" prefWidth="465.0" style="-fx-background-color: #81d4fa;" text=" Event Manager" textFill="#b21e1e">
+                        <Label prefHeight="51.0" prefWidth="142.0" style="-fx-background-color: #81d4fa;" textFill="#b21e1e">
                            <font>
                               <Font name="Consolas" size="18.0" />
-                           </font></Label>
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="59.0" fitWidth="142.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../resourse/mainwindow.gif" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Label>
                         <JFXButton fx:id="loginin" onAction="#login" prefHeight="74.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Log in" textFill="#a14242">
                            <font>
                               <Font name="Broadway" size="22.0" />
@@ -38,17 +47,17 @@
                            <font>
                               <Font name="Broadway" size="22.0" />
                            </font></JFXButton>
-                        <JFXButton fx:id="signin1" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="About us" textFill="#c62b2b">
+                        <JFXButton fx:id="aboutusid" onAction="#aboutusbtn" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="About us" textFill="#c62b2b">
                            <font>
                               <Font name="Broadway" size="22.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="signin3" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Blog" textFill="#c62b2b">
+                        <JFXButton fx:id="blogid" onAction="#blogbtn" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Blog" textFill="#c62b2b">
                            <font>
                               <Font name="Broadway" size="22.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="signin2" onAction="#sign" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Exit" textFill="#c62b2b">
+                        <JFXButton fx:id="exitid" onAction="#exitbtn" prefHeight="64.0" prefWidth="147.0" style="-fx-background-color: #29b6f6;" text="Exit" textFill="#c62b2b">
                            <font>
                               <Font name="Broadway" size="22.0" />
                            </font>
