--- a/src/easv/GUI/View/Users/customerpage.fxml
+++ b/src/easv/GUI/View/Users/customerpage.fxml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 
 <StackPane fx:id="stackpanid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" styleClass="honey" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.CustomerController">
    <children>
-      <AnchorPane fx:id="anchorpaneid" prefHeight="724.0" prefWidth="934.0" style="-fx-background-color: #FFBD33;" stylesheets="/easv/GUI/View/CSS/Styles.css" />
+      <AnchorPane fx:id="anchorpaneid" prefHeight="724.0" prefWidth="934.0" style="-fx-background-color: #FFBD33;" stylesheets="/easv/GUI/View/CSS/Styles.css">
+         <children>
+            <Separator layoutX="262.0" layoutY="25.0" orientation="VERTICAL" prefHeight="672.0" prefWidth="9.0" />
+            <ChoiceBox fx:id="choiceboxid" layoutX="21.0" layoutY="54.0" prefHeight="25.0" prefWidth="201.0" style="-fx-background-color: #FFBD33;" />
+            <ImageView fx:id="imageid" fitHeight="643.0" fitWidth="627.0" layoutX="286.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
+            <JFXButton layoutX="21.0" layoutY="661.0" text="Close" />
+            <Label layoutX="30.0" layoutY="17.0" prefHeight="17.0" prefWidth="201.0" text="your Tcikets list " />
+         </children></AnchorPane>
    </children>
 </StackPane>
