--- a/src/easv/GUI/View/Users/EventMangers.fxml
+++ b/src/easv/GUI/View/Users/EventMangers.fxml
@@ -11,32 +11,32 @@
    <children>
       <AnchorPane fx:id="ancorid" prefHeight="749.0" prefWidth="962.0" style="-fx-background-color: #a3842c;">
          <children>
-            <TableView fx:id="tableviewevents" layoutX="326.0" layoutY="14.0" prefHeight="354.0" prefWidth="630.0" style="-fx-background-color: #575200;">
+            <TableView fx:id="tableviewevents" layoutX="326.0" layoutY="14.0" onMousePressed="#getUsersinSelectedEvent" prefHeight="354.0" prefWidth="630.0" style="-fx-background-color: #575200;">
                <columns>
-                  <TableColumn prefWidth="183.0" text="name" />
-                  <TableColumn minWidth="6.0" prefWidth="168.0" text="location" />
-                  <TableColumn minWidth="0.0" prefWidth="66.0" text="C.alt" />
-                  <TableColumn minWidth="0.0" prefWidth="89.0" text="start date" />
-                  <TableColumn minWidth="0.0" prefWidth="90.0" text="end Date" />
-                  <TableColumn minWidth="0.0" prefWidth="33.0" text="T.alt" />
+                  <TableColumn fx:id="eventname" prefWidth="183.0" text="name" />
+                  <TableColumn fx:id="eventloc" minWidth="6.0" prefWidth="168.0" text="location" />
+                  <TableColumn fx:id="usersineventalt" minWidth="0.0" prefWidth="66.0" text="C.alt" />
+                  <TableColumn fx:id="startevent" minWidth="0.0" prefWidth="89.0" text="start date" />
+                  <TableColumn fx:id="endevent" minWidth="0.0" prefWidth="90.0" text="end Date" />
+                  <TableColumn fx:id="eventticketalt" minWidth="0.0" prefWidth="33.0" text="T.alt" />
                </columns>
             </TableView>
             <TableView fx:id="tableviewusers" layoutX="13.0" layoutY="13.0" prefHeight="694.0" prefWidth="308.0" style="-fx-background-color: #575200;">
                <columns>
-                  <TableColumn prefWidth="29.0" text="C1">
+                  <TableColumn fx:id="usercheckbox" prefWidth="29.0" text="C1">
                      <graphic>
                         <FontAwesomeIconView glyphName="CHECK" />
                      </graphic>
                   </TableColumn>
-                  <TableColumn prefWidth="132.0" text="Name" />
-                  <TableColumn prefWidth="146.0" text="Ticket" />
+                  <TableColumn fx:id="username" prefWidth="132.0" text="Name" />
+                  <TableColumn fx:id="userticket" prefWidth="146.0" text="Ticket" />
                </columns>
             </TableView>
             <TableView fx:id="tableviewtickets" layoutX="326.0" layoutY="467.0" prefHeight="187.0" prefWidth="586.0" style="-fx-background-color: #575200;">
                <columns>
-                  <TableColumn prefWidth="90.0" text="type" />
-                  <TableColumn prefWidth="66.0" text="ticketprice" />
-                  <TableColumn prefWidth="429.0" text="info" />
+                  <TableColumn fx:id="tickettype" prefWidth="90.0" text="type" />
+                  <TableColumn fx:id="ticketprice" prefWidth="66.0" text="ticketprice" />
+                  <TableColumn fx:id="ticketinfo" prefWidth="429.0" text="info" />
                </columns>
             </TableView>
             <JFXButton layoutX="332.0" layoutY="375.0" onAction="#createeventbtn" prefHeight="27.0" prefWidth="86.0" style="-fx-background-color: #00e676;" text="Create Event" />
